<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="414dp"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/clickAqui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clickAqui" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:textOff="APAGADO"
            android:textOn="ENCENDIDO" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/alert_dark_frame" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="129dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/tvPlano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvPlano"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvSerif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/tvSerif"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNegrita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNegrita"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCursiva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCursiva"
            android:textColor="#F4031B"
            android:textSize="34sp"
            android:textStyle="italic" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="411dp"
        android:layout_height="227dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="323dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/moto" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="412dp"
        android:layout_height="288dp"
        android:layout_marginTop="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <LinearLayout
            android:id="@+id/btnConfirmar"
            android:layout_width="410dp"
            android:layout_height="318dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cbAndroid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cbAndroid" />

                <CheckBox
                    android:id="@+id/cbIphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cbIphone" />

                <RadioGroup
                    android:id="@+id/rgOpc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/rbtOpc1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rbtOpc1" />

                    <RadioButton
                        android:id="@+id/rbtOpc2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rbtOpc2" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="211dp"
                android:layout_height="286dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="mostrar"
                    android:text="@string/btnConfirmar" />

                <TextView
                    android:id="@+id/tvSalida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvSalida" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>